-datepicker templates standalone -hide screen reader text -include bootstrap table style -datepicker colors -fixed header overflow bug -styling

--- a/app/less/_yt-base.less
+++ b/app/less/_yt-base.less
@@ -58,3 +58,7 @@ a {
 [ng-click], [data-ng-click] {
     cursor: pointer;
 }
+
+.sr-only {
+    display: none!important;
+}
