--- a/app/less/angular-bootstrap-datetimepicker/_datetimepicker.less
+++ b/app/less/angular-bootstrap-datetimepicker/_datetimepicker.less
@@ -53,14 +53,8 @@
 .datetimepicker .active:hover,
 .datetimepicker .active.disabled,
 .datetimepicker .active.disabled:hover {
-  background-color: #04c;
-  background-image: linear-gradient(to bottom, #08c, #04c);
-  background-repeat: repeat-x;
-  border-color: #04c #04c #002a80;
+  background-color:@yt-color-green;
   color: #fff;
-  -webkit-filter: progid:dximagetransform.microsoft.gradient(startColorstr='#08c', endColorstr='#04c', GradientType=0);
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#08c', endColorstr='#04c', GradientType=0);
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
 .datetimepicker .current,
 .datetimepicker .current:hover,
@@ -92,7 +86,7 @@
 .datetimepicker span.active:hover[disabled],
 .datetimepicker span.active.disabled[disabled],
 .datetimepicker span.active.disabled:hover[disabled] {
-  background-color: #04c;
+  background-color:@yt-color-green;
 }
 .datetimepicker span {
   border-radius: 4px;
