--- a/app/less/app.less
+++ b/app/less/app.less
@@ -15,6 +15,8 @@
 @import '@{lib-base-url}/bootstrap/less/utilities.less';
 @import '@{lib-base-url}/bootstrap/less/responsive-utilities.less';
 @import '@{lib-base-url}/bootstrap/less/grid.less';
+@import '@{lib-base-url}/bootstrap/less/tables.less';
+@import '@{lib-base-url}/bootstrap/less/dropdowns.less';
 
 // Font Awesome
 @import '@{lib-base-url}/font-awesome/less/mixins.less';
